--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,9 @@
 
         <java.version>17</java.version>
         <kotlin.version>2.0.20</kotlin.version>
+        <fernice.version>1.3.0</fernice.version>
+        <swingx.version>1.6.1</swingx.version>
+
         <jupiter-junit.version>5.10.0</jupiter-junit.version>
     </properties>
 
@@ -30,11 +33,6 @@
         </dependency>
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
-            <artifactId>kotlin-reflect</artifactId>
-            <version>${kotlin.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.jetbrains.kotlin</groupId>
             <artifactId>kotlin-test-junit</artifactId>
             <version>${kotlin.version}</version>
             <scope>test</scope>
@@ -44,6 +42,23 @@
             <artifactId>junit-jupiter</artifactId>
             <version>${jupiter-junit.version}</version>
             <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.fernice</groupId>
+            <artifactId>fernice-reflare</artifactId>
+            <version>${fernice.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.fernice</groupId>
+            <artifactId>fernice-reflare-access-jdk-10</artifactId>
+            <version>${fernice.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.swinglabs</groupId>
+            <artifactId>swingx</artifactId>
+            <version>${swingx.version}</version>
         </dependency>
 
         <dependency>
