--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 
         <java.version>17</java.version>
         <kotlin.version>2.0.20</kotlin.version>
-        <fernice.version>1.3.0</fernice.version>
+        <fernice.version>1.3.1-SNAPSHOT</fernice.version>
         <swingx.version>1.6.1</swingx.version>
 
         <jupiter-junit.version>5.10.0</jupiter-junit.version>
@@ -65,6 +65,12 @@
             <groupId>org.jetbrains</groupId>
             <artifactId>annotations</artifactId>
             <version>24.1.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.5.10</version>
         </dependency>
     </dependencies>
 
