--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,8 @@
         <fernice.version>1.3.1-SNAPSHOT</fernice.version>
         <swingx.version>1.6.1</swingx.version>
 
+        <log4j.version>2.24.1</log4j.version>
+
         <jupiter-junit.version>5.10.0</jupiter-junit.version>
     </properties>
 
@@ -68,9 +70,19 @@
         </dependency>
 
         <dependency>
-            <groupId>ch.qos.logback</groupId>
-            <artifactId>logback-classic</artifactId>
-            <version>1.5.10</version>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>${log4j.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-api</artifactId>
+            <version>${log4j.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-slf4j-impl</artifactId>
+            <version>${log4j.version}</version>
         </dependency>
     </dependencies>
 
