--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <fernice.version>1.3.1-SNAPSHOT</fernice.version>
         <swingx.version>1.6.1</swingx.version>
 
+        <kotlin-logging.version>7.0.0</kotlin-logging.version>
         <log4j.version>2.24.1</log4j.version>
 
         <jupiter-junit.version>5.10.0</jupiter-junit.version>
@@ -69,6 +70,11 @@
             <version>24.1.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>io.github.oshai</groupId>
+            <artifactId>kotlin-logging-jvm</artifactId>
+            <version>${kotlin-logging.version}</version>
+        </dependency>
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-core</artifactId>
