--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 
         <java.version>17</java.version>
         <kotlin.version>2.0.20</kotlin.version>
-        <fernice.version>1.3.1-SNAPSHOT</fernice.version>
+        <fernice.version>1.3.1</fernice.version>
         <swingx.version>1.6.1</swingx.version>
 
         <kotlin-logging.version>7.0.0</kotlin-logging.version>
